tests/ui/imports/private-from-decl-macro.fail.stderr
error[E0423]: expected value, found struct `S`
  --> $DIR/private-from-decl-macro.rs:27:17
   |
LL |     pub struct S {}
   |     --------------- `S` defined here
...
LL |         let s = S;
   |                 ^
   |
note: constant `m::S` exists but is inaccessible
  --> $DIR/private-from-decl-macro.rs:10:5
   |
LL |     const S: u8 = 0;
   |     ^^^^^^^^^^^^^^^^ not accessible
help: use struct literal syntax instead
   |
LL |         let s = S {};
   |                   ++
help: a local variable with a similar name exists (notice the capitalization)
   |
LL -         let s = S;
LL +         let s = s;
   |

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0423`.
